fix(ui): fix video grid Item elideText

--- a/sVanilla/resource/sVanilla.qrc
+++ b/sVanilla/resource/sVanilla.qrc
@@ -24,6 +24,7 @@
         <file>icon/video/detail.svg</file>
         <file>icon/video/download.svg</file>
         <file>icon/video/close.svg</file>
+        <file>icon/video/reset.svg</file>
         <file>icon/download/delete.svg</file>
         <file>icon/download/start.svg</file>
         <file>icon/download/pause.svg</file>
