--- a/sVanilla/src/ClientUi/Setting/DefaultSettings.ui
+++ b/sVanilla/src/ClientUi/Setting/DefaultSettings.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>DefaultSetting</class>
- <widget class="QWidget" name="DefaultSetting">
+ <class>DefaultSettings</class>
+ <widget class="QWidget" name="DefaultSettings">
   <property name="geometry">
    <rect>
     <x>0</x>
