--- a/sVanilla/src/ClientUi/VideoList/VideoGridWidget.ui
+++ b/sVanilla/src/ClientUi/VideoList/VideoGridWidget.ui
@@ -1,206 +1,184 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
-  <class>VideoGridItemWidget</class>
-  <widget class="QWidget" name="VideoGridItemWidget">
-    <property name="geometry">
-      <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>347</width>
-        <height>265</height>
-      </rect>
-    </property>
-    <property name="windowTitle">
-      <string>VideoListWidget</string>
-    </property>
-    <layout class="QVBoxLayout" name="verticalLayout">
+ <class>VideoGridItemWidget</class>
+ <widget class="QWidget" name="VideoGridItemWidget">
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>240</width>
+    <height>200</height>
+   </rect>
+  </property>
+  <property name="windowTitle">
+   <string>VideoListWidget</string>
+  </property>
+  <layout class="QVBoxLayout" name="verticalLayout">
+   <property name="leftMargin">
+    <number>8</number>
+   </property>
+   <property name="topMargin">
+    <number>12</number>
+   </property>
+   <property name="rightMargin">
+    <number>8</number>
+   </property>
+   <property name="bottomMargin">
+    <number>8</number>
+   </property>
+   <item>
+    <widget class="::RoundImageWidget" name="cover" native="true">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <widget class="Vanilla::Spinner" name="spinner" native="true">
+      <property name="geometry">
+       <rect>
+        <x>110</x>
+        <y>50</y>
+        <width>120</width>
+        <height>80</height>
+       </rect>
+      </property>
+     </widget>
+    </widget>
+   </item>
+   <item>
+    <widget class="QLabel" name="labelTitle">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QWidget" name="buttonLayoutWidget" native="true">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <layout class="QHBoxLayout" name="horizontalLayout" stretch="1,1,0,0,0">
       <property name="leftMargin">
-        <number>12</number>
+       <number>0</number>
       </property>
       <property name="topMargin">
-        <number>12</number>
+       <number>0</number>
       </property>
       <property name="rightMargin">
-        <number>0</number>
+       <number>5</number>
       </property>
       <property name="bottomMargin">
-        <number>12</number>
+       <number>0</number>
       </property>
       <item>
-        <widget class="::RoundImageWidget" name="cover" native="true">
-          <property name="sizePolicy">
-            <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-            </sizepolicy>
-          </property>
-          <widget class="Vanilla::Spinner" name="spinner" native="true">
-            <property name="geometry">
-              <rect>
-                <x>110</x>
-                <y>50</y>
-                <width>120</width>
-                <height>80</height>
-              </rect>
-            </property>
-          </widget>
-        </widget>
+       <widget class="QLabel" name="labelAuthor">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
       </item>
       <item>
-        <widget class="QLabel" name="labelTitle">
-          <property name="sizePolicy">
-            <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-            </sizepolicy>
-          </property>
-          <property name="text">
-            <string />
-          </property>
-        </widget>
+       <widget class="QLabel" name="labelPublishDate">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
       </item>
       <item>
-        <widget class="QWidget" name="buttonLayoutWidget" native="true">
-          <property name="sizePolicy">
-            <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-            </sizepolicy>
-          </property>
-          <layout class="QHBoxLayout" name="horizontalLayout">
-            <property name="leftMargin">
-              <number>0</number>
-            </property>
-            <property name="topMargin">
-              <number>0</number>
-            </property>
-            <property name="rightMargin">
-              <number>5</number>
-            </property>
-            <property name="bottomMargin">
-              <number>0</number>
-            </property>
-            <item>
-              <widget class="QLabel" name="labelAuthor">
-                <property name="sizePolicy">
-                  <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-                    <horstretch>0</horstretch>
-                    <verstretch>0</verstretch>
-                  </sizepolicy>
-                </property>
-                <property name="minimumSize">
-                  <size>
-                    <width>60</width>
-                    <height>0</height>
-                  </size>
-                </property>
-                <property name="text">
-                  <string />
-                </property>
-              </widget>
-            </item>
-            <item>
-              <widget class="QLabel" name="labelPulishDate">
-                <property name="sizePolicy">
-                  <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-                    <horstretch>0</horstretch>
-                    <verstretch>0</verstretch>
-                  </sizepolicy>
-                </property>
-                <property name="text">
-                  <string />
-                </property>
-              </widget>
-            </item>
-            <item>
-              <widget class="QLabel" name="labelDuration">
-                <property name="sizePolicy">
-                  <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-                    <horstretch>0</horstretch>
-                    <verstretch>0</verstretch>
-                  </sizepolicy>
-                </property>
-                <property name="text">
-                  <string />
-                </property>
-              </widget>
-            </item>
-            <item>
-              <spacer name="horizontalSpacer">
-                <property name="orientation">
-                  <enum>Qt::Horizontal</enum>
-                </property>
-                <property name="sizeType">
-                  <enum>QSizePolicy::MinimumExpanding</enum>
-                </property>
-                <property name="sizeHint" stdset="0">
-                  <size>
-                    <width>0</width>
-                    <height>0</height>
-                  </size>
-                </property>
-              </spacer>
-            </item>
-            <item>
-              <widget class="QPushButton" name="btnInfo">
-                <property name="sizePolicy">
-                  <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-                    <horstretch>0</horstretch>
-                    <verstretch>0</verstretch>
-                  </sizepolicy>
-                </property>
-                <property name="text">
-                  <string />
-                </property>
-                <property name="icon">
-                  <iconset>
-                    <normaloff>:/icon/video/detail.svg</normaloff>:/icon/video/detail.svg</iconset>
-                </property>
-                <property name="_vanillaStyle_Patch" stdset="0">
-                  <string>CleanButtonPatch</string>
-                </property>
-              </widget>
-            </item>
-            <item>
-              <widget class="QPushButton" name="btnDownload">
-                <property name="sizePolicy">
-                  <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-                    <horstretch>0</horstretch>
-                    <verstretch>0</verstretch>
-                  </sizepolicy>
-                </property>
-                <property name="text">
-                  <string />
-                </property>
-                <property name="icon">
-                  <iconset>
-                    <normaloff>:/icon/video/download.svg</normaloff>:/icon/video/download.svg</iconset>
-                </property>
-                <property name="_vanillaStyle_Patch" stdset="0">
-                  <string>CleanButtonPatch</string>
-                </property>
-              </widget>
-            </item>
-          </layout>
-        </widget>
+       <widget class="QLabel" name="labelDuration">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
       </item>
-    </layout>
-  </widget>
-  <layoutdefault spacing="6" margin="11" />
-  <customwidgets>
-    <customwidget>
-      <class>::RoundImageWidget</class>
-      <extends>QWidget</extends>
-      <header>SUI/RoundImageWidget.h</header>
-      <container>1</container>
-    </customwidget>
-    <customwidget>
-      <class>Vanilla::Spinner</class>
-      <extends>QWidget</extends>
-      <header>VanillaStyle/Widgets/Spinner.h</header>
-      <container>1</container>
-    </customwidget>
-  </customwidgets>
-
-  <connections />
+      <item>
+       <widget class="QPushButton" name="btnInfo">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+        <property name="icon">
+         <iconset>
+          <normaloff>:/icon/video/detail.svg</normaloff>:/icon/video/detail.svg</iconset>
+        </property>
+        <property name="_vanillaStyle_Patch" stdset="0">
+         <string>CleanButtonPatch</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="btnDownload">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+        <property name="icon">
+         <iconset>
+          <normaloff>:/icon/video/download.svg</normaloff>:/icon/video/download.svg</iconset>
+        </property>
+        <property name="_vanillaStyle_Patch" stdset="0">
+         <string>CleanButtonPatch</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
+  </layout>
+ </widget>
+ <layoutdefault spacing="6" margin="11"/>
+ <customwidgets>
+  <customwidget>
+   <class>::RoundImageWidget</class>
+   <extends>QWidget</extends>
+   <header>SUI/RoundImageWidget.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>Vanilla::Spinner</class>
+   <extends>QWidget</extends>
+   <header>VanillaStyle/Widgets/Spinner.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
+ <resources/>
+ <connections/>
 </ui>
