feature(setting): add system tray
- add system tray;
- adjust aria2 status label.

--- a/sVanilla/resource/sVanilla.qrc
+++ b/sVanilla/resource/sVanilla.qrc
@@ -40,5 +40,6 @@
         <file>icon/setting/unchecked.svg</file>
         <file>icon/account.svg</file>
         <file>CoverSpace.svg</file>
+        <file>sVanilla.svg</file>
     </qresource>
 </RCC>
