feature(downloader): add selected actions menu
- add selected menu;
- fix include error;
- add error status svg;
- add createContextMenu function.

--- a/sVanilla/resource/sVanilla.qrc
+++ b/sVanilla/resource/sVanilla.qrc
@@ -34,6 +34,7 @@
         <file>icon/download/downloading.svg</file>
         <file>icon/download/completed.svg</file>
         <file>icon/download/waiting.svg</file>
+        <file>icon/download/error.svg</file>
         <file>icon/setting/arrow-down.svg</file>
         <file>icon/setting/arrow-down-disable.svg</file>
         <file>icon/setting/arrow-up.svg</file>
